--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.4.1",
     "ramda": "^0.26.1"
   }
 }
