--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^0.3.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-jwt": "^5.3.1",
